# pdf2htmlEX

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CTestCustom.cmake  ChangeLog  INSTALL  LICENSE  LICENSE_CC-BY-3.0  README.md  TODO  build_for_ppa.py  dobuild  doclean  donate.html  index.html  params.json  pdf2htmlEX.1  pdf2htmlEX.1.in
debian/: changelog  control  copyright  pdf2htmlex.install  rules
debian/source/: format
demo/: all.css  cheat.html  cheat1.page  cheat10.page  cheat2.page  cheat3.page  cheat4.page  cheat5.page  cheat6.page  cheat7.page  cheat8.page  cheat9.page  chn.html  chn1.page  chn10.page  chn11.page  chn12.page  chn13.page  chn14.page  chn15.page  chn16.page  chn17.page  chn18.page  chn19.page  chn2.page  chn3.page  chn4.page  chn5.page  chn6.page  chn7.page  chn8.page  chn9.page  convert.pe  demo.html  demo1.page  demo10.page  demo11.page  demo12.page  demo13.page  demo14.page  (+76 more)
doc/: tb108wang.html  tb108wang1.page  tb108wang10.page  tb108wang11.page  tb108wang12.page  tb108wang2.page  tb108wang3.page  tb108wang4.page  tb108wang5.page  tb108wang6.page  tb108wang7.page  tb108wang8.page  tb108wang9.page
lib/: all.css  base.css  head.html  neck.html  tail.html
logo/: LICENSE  notes.txt  test.html  update_png.sh
share/: LICENSE  all.css  base.css  base.css.in  build_css.sh  build_js.sh  fancy.css.in  head.html  hide_pages.js  manifest  navbar.js.in  neck.html  pdf2htmlEX.js  pdf2htmlEX.js.in  pdf2htmlEX.min.js  scroll.js  tail.html  unify.pe
share/js_src/: compile.sh  css_class_names.js.in  header.js  pdf2htmlEX.js.in  viewer.js
src/: ArgParser.cc  ArgParser.h  BackgroundRenderer.cc  BackgroundRenderer.h  Base64Stream.cc  Base64Stream.h  CairoBackgroundRenderer.cc  Color.cc  Color.h  Consts.cc  Consts.h  CoveredTextDetector.cc  CoveredTextDetector.h  CoveredTextHandler.cc  CoveredTextHandler.h  DrawingTracer.cc  DrawingTracer.h  FontPreprocessor.cc  HTMLRenderer.cc  HTMLRenderer.h  HTMLRenderer_mp.h  HTMLState.h  HTMLTextLine.cc  HTMLTextLine.h  HTMLTextPage.cc  HTMLTextPage.h  PaperClub.h  Param.h  Preprocessor.cc  Preprocessor.h  SplashBackgroundRenderer.cc  StateManager.h  StringFormatter.h  TextLineBuffer.cc  TextLineBuffer.h  TmpFiles.cc  TmpFiles.h  config.h.in  css_class_names.cmakelists.txt  ff.c  (+6 more)
src/BackgroundRenderer/: BackgroundRenderer.cc  BackgroundRenderer.h  BackgroundRenderer_forward.h  CairoBackgroundRenderer.cc  CairoBackgroundRenderer.h  SplashBackgroundRenderer.cc  SplashBackgroundRenderer.h
src/BackgroundRenderer/CairoOutputDev/: CairoOutputDev.cc  CairoRescaleBox.cc
src/BackgroundRenderer/CairoOutputDev/0.22.5/: CairoOutputDev.cc  CairoOutputDev.h
src/BackgroundRenderer/CairoOutputDev/git/: CairoRescaleBox.cc
src/CairoOutputDev/: CairoFontEngine.cc  CairoFontEngine.h  CairoOutputDev.cc  CairoOutputDev.h  CairoRescaleBox.cc
src/HTMLRenderer/: HTMLDevice.cc  HTMLRenderer.h  LineBuffer.cc  Preprocessor.cc  StateTracker.h  TextLineBuffer.cc  TextLineBuffer.h  TextState.cc  TmpFiles.cc  draw.cc  export.cc  export.h  font.cc  form.cc  general.cc  image.cc  install.cc  link.cc  namespace.h  outline.cc  state.cc  text.cc
src/ff/: ff.c  ff.h
src/include/: ArgParser.h  BackgroundRenderer.h  CairoBackgroundRenderer.h  FontPreprocessor.h  HTMLDevice.h  HTMLRenderer.h  Param.h  Preprocessor.h  SplashBackgroundRenderer.h  TextState.h  TmpFiles.h  ff.h  ffw.h  namespace.h  pdf2htmlEX-config.h  pdf2htmlEX-config.h.in  util.h
src/text/: TextChar.h  TextNode.h  TextPage.h  TextPageBuilder.cc  TextPageBuilder.h  TextSegment.h  TextStyle.h  TextWord.h
src/util/: ArgParser.cc  ArgParser.h  CSSClassNames.h  HTMLState.h  Preprocessor.cc  Preprocessor.h  StateManager.h  StateTracker.h  StringFormatter.cc  StringFormatter.h  TextLineBuffer.cc  TextLineBuffer.h  TmpFiles.cc  TmpFiles.h  base64.cc  base64.h  base64stream.cc  base64stream.h  color.cc  const.cc  const.h  css_const.h.in  encoding.cc  encoding.h  ffw.c  ffw.h  math.bk.cc  math.cc  math.h  mingw.cc  mingw.h  misc.cc  misc.h  namespace.h  path.cc  path.h  string_formatter.h  unicode.cc  unicode.h  util.cc  (+3 more)
stylesheets/: stylesheet.css
test/: .gitattributes  README.md  browser_tests.py  fancy.min.css  start_xvfb.sh  test.py  test.py.in  test_conversion.py  test_local_browser.py  test_naming.py  test_output.py  test_remote_browser.py
test/browser_tests/: basic_text.tex  test_fail.tex
test/browser_tests/basic_text/: basic_text.html
test/browser_tests/fontfile3_opentype/: fontfile3_opentype.html
test/browser_tests/geneve_1564/: geneve_1564.html
test/browser_tests/invalid_unicode_issue477/: invalid_unicode_issue477.html
test/browser_tests/svg_background_with_page_rotation_issue402/: svg_background_with_page_rotation_issue402.html
test/browser_tests/text_visibility/: text_visibility.html
test/browser_tests/with_form/: with_form.html
test/old/: convert_to_woff.fontforge
